# sudachi.rs

./: Cargo.toml  run_timeperf.sh
sudachi/src/analysis/: lattice.rs
timeperf-original/: Cargo.toml
timeperf-original/src/: main.rs
timeperf-packed/: Cargo.toml
timeperf-packed2/: Cargo.toml
timeperf-packed2/src/: timer.rs
