[package]
name = "timeperf-original"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudachi = { git = "https://github.com/WorksApplications/sudachi.rs.git", rev = "f0bf811" }
clap = { version = "3.1", features = ["derive"] }  # MIT or Apache-2.0
