[package]
name = "timeperf-packed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudachi = { git = "https://github.com/kampersanda/sudachi.rs.git", branch = "pack-lattice-nodes" }
clap = { version = "3.1", features = ["derive"] }  # MIT or Apache-2.0
